QPID-5747: create codec for outgoing connections on establishing the connection, so that any disconnect before we try to write can still be communicated to upper layers

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1594277 13f79535-47bb-0310-9956-ffa450edef68